<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

>
    <data>
        <variable name="viewModel"
                  type="life.circles.stopwatch.formDialog.viewModel.StopWatchFormViewModel"/>
        <variable name="controller"
                  type="life.circles.stopwatch.formDialog.controller.StopWatchFormController"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:textSize="16sp" android:id="@+id/title" android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp"
                android:text="@string/minutes_input"/>

        <EditText
                android:inputType="numberDecimal"
                android:gravity="center"
                android:text="@{viewModel.minutes}"
                android:maxLength="2"
                android:layout_height="50dp" android:layout_below="@id/title"
                android:layout_width="200dp" android:layout_centerHorizontal="true"
                android:id="@+id/inputField"
        />
        <Button
                android:text="@string/button_start"
                android:tooltipText="Start" android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:onClick="@{() -> controller.startTimer(viewModel.minutes)}"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:layout_below="@id/inputField"
                android:id="@+id/startButtonDialog"
                android:layout_marginTop="10dp"
        />
    </RelativeLayout>

</layout>
