...
                android:layout_height="wrap_content"
                android:id="@+id/timer" android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                android:tooltipText="25:00"
                app:layout_constraintBottom_toTopOf="@+id/expired"/>
        <Button
                android:text="@{viewModel.buttonText}"
                android:tooltipText="Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isTimerRunning()? View.INVISIBLE : View.VISIBLE}"
                android:onClick="@{()-> controller.beginStopWatch()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/startButton"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/expired"
                android:layout_width="wrap_content"
...
